made changes and updated version

--- a/client/src/components/loginForm/LoginForm.css
+++ b/client/src/components/loginForm/LoginForm.css
@@ -46,7 +46,7 @@
 #Form-container form button{
     font-weight: 600;
     font-size: 20px;
-    background: #079992;
+    background: #c0392b;
     color: #ffffff;
     cursor: pointer;
 }
